--- a/application-received.html
+++ b/application-received.html
@@ -1,36 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>草率季Taipei Art Book Fair</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="font.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>草率季Taipei Art Book Fair</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="font.css" />
 
-  <!-- jquery這裡 -->
-  <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script>  document.addEventListener('DOMContentLoaded', () => {
-    const isSafari = /^((?!chrome|android).)*safari/i.test(navigator.userAgent);
-    const img = document.getElementById('sasa');
+    <!-- jquery這裡 -->
+    <link
+      rel="stylesheet"
+      href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css"
+    />
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const isSafari = /^((?!chrome|android).)*safari/i.test(
+          navigator.userAgent
+        );
+        const img = document.getElementById("sasa");
 
-    if (isSafari && img) {
-      img.src = 'safaririp.jpg';
-      img.style.filter = 'none';
-    }
-  });</script>
-</head>
-<body style="background-image:url(safaririp.jpg)">
-<p style="padding: 2rem;background-color:whitesmoke; color: black;margin: 1rem;border-radius: 1rem;"> 
-    我們已經收到您的申請，感謝您的報名。您將收到一封自動確認電子郵件，如果您沒有收到電子郵件，請檢查您的垃圾信箱。如果有需要修改資料，請重新報名。<br>
-    Application Received. Thank you for submitting your application, We have successfully received your response. If you need to modify it, please fill in the registration form again.
-    You will receive an automated confirmation Email once we have received your application. Please check your Spam folders if you haven’t received your Email. <br><br>
-    
-    完整的參展名單將從九月開始，陸續在我們的官方網站和社群平台上公布。<br>The complete list of exhibitors will gradually be announced on our official website and social media platforms starting in September.
-    <br><br><span style="position: relative;">
-        <a href="index.html"><button style="background: white;border: 1px solid black;font-size: 0.9rem;cursor: pointer;">回主頁 Back to Homepage</button></a>
-    </span>
-</p>
+        if (isSafari && img) {
+          img.src = "safaririp.jpg";
+          img.style.filter = "none";
+        }
+      });
+    </script>
+  </head>
+  <body style="background-image: url(safaririp.jpg)">
+    <p
+      style="
+        padding: 2rem;
+        background-color: whitesmoke;
+        color: black;
+        margin: 1rem;
+        border-radius: 1rem;
+      "
+    >
+      我們已經收到您的申請，感謝您的報名。您將收到一封自動確認電子郵件，如果您沒有收到電子郵件，請檢查您的垃圾信箱。如果有需要修改資料，請重新報名。<br />
+      Application Received. Thank you for submitting your application, We have
+      successfully received your response. If you need to modify it, please fill
+      in the registration form again. You will receive an automated confirmation
+      Email once we have received your application. Please check your Spam
+      folders if you haven’t received your Email. <br /><br />
 
-</body>
+      完整的參展名單將從九月開始，陸續在我們的官方網站和社群平台上公布。<br />The
+      complete list of exhibitors will gradually be announced on our official
+      website and social media platforms starting in September.
+      <br /><br /><span style="position: relative">
+        <a href="index.html"
+          ><button
+            style="
+              background: white;
+              border: 1px solid black;
+              font-size: 0.9rem;
+              cursor: pointer;
+            "
+          >
+            回主頁 Back to Homepage
+          </button></a
+        >
+      </span>
+    </p>
+  </body>
+</html>
