upload system tryout

--- a/localapplication.html
+++ b/localapplication.html
@@ -437,6 +437,12 @@
           >
           <div class="upload-container">
             <input type="file" name="file" />
+            <input
+              type="hidden"
+              name="formId"
+              value="some-unique-id-or-timestamp"
+            />
+            <input type="hidden" name="category" value="artwork" />
           </div>
         </div>
 
@@ -463,6 +469,12 @@
           >
           <div class="upload-container">
             <input type="file" name="file" />
+            <input
+              type="hidden"
+              name="formId"
+              value="some-unique-id-or-timestamp"
+            />
+            <input type="hidden" name="category" value="product" />
           </div>
           <textarea
             class="form-input-textarea"
@@ -493,6 +505,12 @@
           >
           <div class="upload-container">
             <input type="file" name="file" />
+            <input
+              type="hidden"
+              name="formId"
+              value="some-unique-id-or-timestamp"
+            />
+            <input type="hidden" name="category" value="proposal" />
           </div>
         </div>
 
@@ -781,6 +799,7 @@
     <script src="identity.js"></script>
     <script src="jump.js"></script>
     <script src="yes.js"></script>
+    <script src="upload.js"></script>
     <!-- <script src="hide.js"></script> -->
   </body>
 </html>
