tc001-mobile-upload

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       id="sasa"
       src="001.jpg"
     />
+
     <div class="grid-layer overlay" style="z-index: -2"></div>
 
     <!-- Toggle UI -->
@@ -46,7 +47,18 @@
 
     <!-- 廣告刷起來 -->
     <div class="flickers" id="flickers"></div>
-
+    <div
+      class="tag"
+      style="top: 25vh; right: 23vw; transform: rotate(-0.02turn)"
+    >
+      <p>&nbsp;TAIPEI ART BOOK FAIR&nbsp;</p>
+    </div>
+    <div
+      class="tag"
+      style="top: 65vh; right: 15vw; transform: rotate(0.02turn)"
+    >
+      <p>&nbsp;草率季&nbsp;</p>
+    </div>
     <!-- moshimoshi -->
     <nav>
       <a class="vertical about" onclick="myAbout()">ABOUT</a>
@@ -65,6 +77,9 @@
         <span>OPEN CALL</span><br />
         <span>OPEN CALL</span>
       </div>
+      <a onclick="openThis(openopencall);" class="vertical open-call-m"
+        >OPEN CALL</a
+      >
       <a
         href="https://taipeiartbookfair.easy.co/"
         target="_blank"
@@ -106,18 +121,6 @@
           >←← Open Call is out! 徵件，快投啊！</span
         >
       </p>
-    </div>
-    <div
-      class="tag"
-      style="top: 25vh; right: 23vw; transform: rotate(-0.02turn)"
-    >
-      <p>&nbsp;TAIPEI ART BOOK FAIR&nbsp;</p>
-    </div>
-    <div
-      class="tag"
-      style="top: 65vh; right: 15vw; transform: rotate(0.02turn)"
-    >
-      <p>&nbsp;草率季&nbsp;</p>
     </div>
 
     <!-- banana -->
