--- a/index.html
+++ b/index.html
@@ -47,16 +47,10 @@
 
     <!-- 廣告刷起來 -->
     <div class="flickers" id="flickers"></div>
-    <div
-      class="tag"
-      style="top: 25vh; right: 23vw; transform: rotate(-0.02turn)"
-    >
+    <div class="tag-m">
       <p>&nbsp;TAIPEI ART BOOK FAIR&nbsp;</p>
     </div>
-    <div
-      class="tag"
-      style="top: 65vh; right: 15vw; transform: rotate(0.02turn)"
-    >
+    <div class="tag2-m">
       <p>&nbsp;草率季&nbsp;</p>
     </div>
     <!-- moshimoshi -->
@@ -148,7 +142,13 @@
         </div>
       </div>
     </div>
-
+    <!-- tags -->
+    <div class="tag">
+      <p>&nbsp;TAIPEI ART BOOK FAIR&nbsp;</p>
+    </div>
+    <div class="tag2">
+      <p>&nbsp;草率季&nbsp;</p>
+    </div>
     <!-- 關羽
   <div class="about-text">
     <p>一年一度的獨立藝文盛會「草率季」（Taipei Art Book Fair）在今年邁入第八屆。這個自2016年起年年舉行（除2021年因疫情停辦）的文創活動，迄今仍不斷打破大眾對市集的想像。<br><br>現場集結各路創作者、出版社、獨立書店與藝術家等攤位，展出各項獨立刊物、畫冊、藝術雜誌、美術書刊、特色服飾、配件、手做小物⋯⋯等極具特色的出版品與實體創作品，堪稱是年度最大攤的獨立出版創作者派對。
