local change to fill in links

--- a/localapplication.html
+++ b/localapplication.html
@@ -421,8 +421,15 @@
           style="display: none"
         >
           <span class="from-header">作品上傳</span>
-          請提供已發行或預計發行之書籍相關作品。（不包含記事本、日月曆、明信片等輸出物），如提供之內容未達到錄取書攤類之標準，主辦單位將視情況條件式錄取其他攤種。
+          <!-- 請提供已發行或預計發行之書籍相關作品。（不包含記事本、日月曆、明信片等輸出物），如提供之內容未達到錄取書攤類之標準，主辦單位將視情況條件式錄取其他攤種。
           <br /><br />
+          從事藝術書刊創作者將作為入選優先條件審核，主辦單位將依照您所提交的內容供主辦單位審核。同時歡迎創作者依每屆主題發想創作及佈置攤位，這也將此納入攤位審核及草率獎參考。 -->
+          請提供雲端連結，內需包含作品列表、作品圖片⋯⋯等內容，並請確認存取權限為公開，若無法開啟或資料不齊全將不另行通知。
+          <br />
+          <br />
+          請提供已發行或預計發行之書籍相關作品。（不包含記事本、日月曆、明信片等輸出物），如提供之內容未達到錄取書攤類之標準，主辦單位將視情況條件式錄取其他攤種。
+          <br />
+          <br />
           從事藝術書刊創作者將作為入選優先條件審核，主辦單位將依照您所提交的內容供主辦單位審核。同時歡迎創作者依每屆主題發想創作及佈置攤位，這也將此納入攤位審核及草率獎參考。
         </div>
         <div
@@ -430,7 +437,10 @@
           id="uploadArtwork-l"
           style="display: none"
         >
-          <span class="from-description-header-ness"
+          <span class="from-description-header"
+            >必填問題、雲端連結上傳、<strong>請確認存取權限為公開</strong></span
+          >
+          <!-- <span class="from-description-header-ness"
             >必填問題、請上傳PDF檔、檔案上限：<strong
               >最多 10 頁 A4，檔案大小不超過 8MB</strong
             ></span
@@ -443,7 +453,14 @@
               value="some-unique-id-or-timestamp"
             />
             <input type="hidden" name="category" value="artwork" />
-          </div>
+          </div> -->
+          <input
+            type="url"
+            class="form-input"
+            name="entry.715764736"
+            placeholder="作品連結。https://"
+            maxlength="3000"
+          />
         </div>
 
         <!--Product Links-->
@@ -455,14 +472,17 @@
           <span class="from-header">商品連結與販售品項描述</span>
           內需包含商品圖片⋯⋯等內容
           <br /><br />
-          另請簡述您攤位準備販售之商品品項。
+          <!-- 另請簡述您攤位準備販售之商品品項。 -->請提供雲端連結，內需包含商品圖片⋯⋯等內容，並請確認存取權限為公開，若無法開啟或資料不齊全將不另行通知。
         </div>
         <div
           class="column layout-form-column-grid-1 question-ProductLinks"
           id="productLink-l"
           style="display: none"
         >
-          <span class="from-description-header-ness"
+          <span class="from-description-header"
+            >必填問題、雲端連結上傳、<strong>請確認存取權限為公開</strong></span
+          >
+          <!-- <span class="from-description-header-ness"
             >必填問題、請上傳PDF檔、檔案上限：<strong
               >最多 10 頁 A4，檔案大小不超過 8MB</strong
             ></span
@@ -475,7 +495,14 @@
               value="some-unique-id-or-timestamp"
             />
             <input type="hidden" name="category" value="product" />
-          </div>
+          </div> -->
+          <input
+            type="url"
+            class="form-input"
+            name="entry.1111437113"
+            placeholder="商品連結。https://"
+            maxlength="3000"
+          />
           <textarea
             class="form-input-textarea"
             name="entry.1425905511"
@@ -490,8 +517,10 @@
           id="proposalLink"
           style="display: none"
         >
+          <!-- <span class="from-header">企劃書連結</span>
+          內需包含裝置草圖、計畫說明、創作者介紹、作品介紹、販售清單⋯⋯等內容 -->
           <span class="from-header">企劃書連結</span>
-          內需包含裝置草圖、計畫說明、創作者介紹、作品介紹、販售清單⋯⋯等內容
+          請提供雲端連結，內需包含裝置草圖、計畫說明、創作者介紹、作品介紹、販售清單⋯⋯等內容，並請確認存取權限為公開，若無法開啟或資料不齊全將不另行通知。
         </div>
         <div
           class="column layout-form-column-grid-1 question-PlanLinks"
@@ -499,11 +528,15 @@
           style="display: none"
         >
           <span class="from-description-header-ness"
+            >必填問題、雲端連結上傳、<strong>請確認存取權限為公開</strong></span
+          >
+
+          <!-- <span class="from-description-header-ness"
             >必填問題、請上傳PDF檔、檔案上限：<strong
               >最多 20 頁 A4，檔案大小不超過 10MB</strong
             ></span
-          >
-          <div class="upload-container">
+          > -->
+          <!-- <div class="upload-container">
             <input type="file" name="file" />
             <input
               type="hidden"
@@ -511,7 +544,14 @@
               value="some-unique-id-or-timestamp"
             />
             <input type="hidden" name="category" value="proposal" />
-          </div>
+          </div> -->
+          <input
+            type="url"
+            class="form-input"
+            name="entry.1801583093"
+            placeholder="企劃書連結。https://"
+            maxlength="3000"
+          />
         </div>
 
         <!--Social Media-->
@@ -799,7 +839,7 @@
     <script src="identity.js"></script>
     <script src="jump.js"></script>
     <script src="yes.js"></script>
-    <script src="upload.js"></script>
+    <!-- <script src="upload.js"></script> -->
     <!-- <script src="hide.js"></script> -->
   </body>
 </html>
