--- a/localapplication.html
+++ b/localapplication.html
@@ -437,7 +437,7 @@
           id="uploadArtwork-l"
           style="display: none"
         >
-          <span class="from-description-header"
+          <span class="from-description-header-ness"
             >必填問題、雲端連結上傳、<strong>請確認存取權限為公開</strong></span
           >
           <!-- <span class="from-description-header-ness"
@@ -479,7 +479,7 @@
           id="productLink-l"
           style="display: none"
         >
-          <span class="from-description-header"
+          <span class="from-description-header-ness"
             >必填問題、雲端連結上傳、<strong>請確認存取權限為公開</strong></span
           >
           <!-- <span class="from-description-header-ness"
