--- a/localapplication.html
+++ b/localapplication.html
@@ -387,9 +387,9 @@
             onchange="this.style.color = this.value ? 'black' : 'grey';"
           >
             <option value="" disabled selected hidden>請選擇作品類別</option>
-            <option value="book">書</option>
-            <option value="nonbook">非書</option>
-            <option value="food">食物酒水</option>
+            <option value="書">書</option>
+            <option value="非書">非書</option>
+            <option value="食物酒水">食物酒水</option>
           </select>
         </div>
 
