--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -576,9 +576,9 @@
             <option value="" disabled selected hidden>
               Please select the type of your work
             </option>
-            <option value="book">Book</option>
-            <option value="nonbook">non-book</option>
-            <option value="food">Food and Drinks</option>
+            <option value="書">Book</option>
+            <option value="非書">non-book</option>
+            <option value="食物酒水">Food and Drinks</option>
           </select>
         </div>
 
