link box spacing

--- a/localapplication.html
+++ b/localapplication.html
@@ -437,9 +437,9 @@
           id="uploadArtwork-l"
           style="display: none"
         >
-          <span class="from-description-header"
+          <span class="from-description-header-ness"
             >必填問題、雲端連結上傳、<strong>請確認存取權限為公開</strong></span
-          >
+          ><br />
           <!-- <span class="from-description-header-ness"
             >必填問題、請上傳PDF檔、檔案上限：<strong
               >最多 10 頁 A4，檔案大小不超過 8MB</strong
@@ -479,7 +479,7 @@
           id="productLink-l"
           style="display: none"
         >
-          <span class="from-description-header"
+          <span class="from-description-header-ness"
             >必填問題、雲端連結上傳、<strong>請確認存取權限為公開</strong></span
           >
           <!-- <span class="from-description-header-ness"
@@ -495,14 +495,14 @@
               value="some-unique-id-or-timestamp"
             />
             <input type="hidden" name="category" value="product" />
-          </div> -->
+          </div> --><br />
           <input
             type="url"
             class="form-input"
             name="entry.1111437113"
             placeholder="商品連結。https://"
             maxlength="3000"
-          />
+          /><br />
           <textarea
             class="form-input-textarea"
             name="entry.1425905511"
@@ -529,7 +529,7 @@
         >
           <span class="from-description-header-ness"
             >必填問題、雲端連結上傳、<strong>請確認存取權限為公開</strong></span
-          >
+          ><br />
 
           <!-- <span class="from-description-header-ness"
             >必填問題、請上傳PDF檔、檔案上限：<strong
