--- a/localapplication.html
+++ b/localapplication.html
@@ -383,7 +383,7 @@
             class="form-input"
             name="entry.1482635628"
             required
-            style="color: grey"
+            style="color: grey; max-width: 65%"
           >
             <option value="" disabled selected hidden>請選擇作品類別</option>
           </select>
