--- a/localapplication.html
+++ b/localapplication.html
@@ -256,7 +256,7 @@
             class="form-input-radio"
             name="entry.133172086"
             id="PreferredBoothType_CreativeProducts"
-            value="創作型商品"
+            value="創作商品"
             required
           />
           <label for="PreferredBoothType_CreativeProducts" class="form-label">
@@ -291,7 +291,7 @@
             class="form-input-radio"
             name="entry.133172086"
             id="PreferredBoothType_Curation"
-            value="裝置類"
+            value="裝置類型攤位"
             required
           />
           <label for="PreferredBoothType_Curation" class="form-label">
