--- a/localapplication.html
+++ b/localapplication.html
@@ -716,14 +716,39 @@
         </div>
         <div class="column layout-form-column-grid-1">
           <span class="from-description-header-ness">必填問題</span>
-          <input
-            autocomplete="email"
-            class="form-input"
-            name="entry.174970451"
-            placeholder="密碼"
-            maxlength="500"
-            required
-          />
+          <div style="position: relative">
+            <input
+              id="password"
+              type="password"
+              autocomplete="new-password"
+              class="form-input"
+              name="entry.174970451"
+              placeholder="Password"
+              maxlength="500"
+              required
+              style="padding-right: 30px"
+            />
+            <button
+              type="button"
+              id="togglePassword"
+              style="
+                position: absolute;
+                right: 5px;
+                top: 50%;
+                transform: translateY(-50%);
+                font-size: 14px;
+              "
+            >
+              Show
+            </button>
+          </div>
+
+          <div id="password-rules" style="margin-top: 8px; font-size: 14px">
+            <div id="length-rule">✕ 至少 8 個字元</div>
+            <div id="uppercase-rule">✕ 至少一個大寫字母</div>
+            <div id="lowercase-rule">✕ 至少一個小寫字母</div>
+            <div id="number-rule">✕ 至少一個數字</div>
+          </div>
         </div>
 
         <!--Telephone Number-->
@@ -821,6 +846,7 @@
     <script src="identity2.js"></script>
     <script src="jump.js"></script>
     <script src="yes.js"></script>
+    <script src="password.js"></script>
     <!-- <script src="upload.js"></script> -->
     <!-- <script src="hide.js"></script> -->
   </body>
