--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -595,7 +595,7 @@
             name="entry.1482635628"
             required
             disabled
-            style="color: grey"
+            style="color: grey; max-width: 65%"
             onchange="this.style.color = this.value ? 'black' : 'grey';"
           >
             <option value="" disabled selected hidden>
