refactor: update upload button to submit and enhance file validation

--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -631,7 +631,7 @@
           />
           <input type="hidden" id="category" value="artwork" />
           <input type="hidden" name="entry.715764736" id="uploadedFileUrl" />
-          <button type="button" id="uploadButton">upload</button>
+          <!-- <button type="button" id="uploadButton">upload</button>  改為submit前upload-->
         </div>
 
         <!--Social Media-->
@@ -980,10 +980,10 @@
       </div>
     </form>
 
+    <script src="uploadoversea.js"></script>
     <script src="identity.js"></script>
     <script src="jump.js"></script>
     <script src="yes.js"></script>
-    <script src="uploadoversea.js"></script>
     <script src="password.js"></script>
     <!-- <script src="hide.js"></script> -->
   </body>
