fix: update file upload button functionality and validation checks

--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -631,7 +631,8 @@
           />
           <input type="hidden" id="category" value="artwork" />
           <input type="hidden" name="entry.715764736" id="uploadedFileUrl" />
-          <!-- <button type="button" id="uploadButton">upload</button>  改為submit前upload-->
+          <!-- 應改為submit前upload -->
+          <button type="button" id="uploadButton">upload</button>
         </div>
 
         <!--Social Media-->
