fix: comment out unused scripts and enhance file upload validation

--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -985,7 +985,7 @@
     <script src="yes.js"></script>
     <script src="password.js"></script>
     <script src="uploadoversea.js"></script>
-    <script src="jump.js"></script>
+    <!-- <script src="jump.js"></script> -->
     <!-- <script src="hide.js"></script> -->
   </body>
 </html>
