fix: comment out unused upload button and debugging logs in file upload script

--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -632,7 +632,7 @@
           <input type="hidden" id="category" value="artwork" />
           <input type="hidden" name="entry.715764736" id="uploadedFileUrl" />
           <!-- 應改為submit前upload -->
-          <button type="button" id="uploadButton">upload</button>
+          <!-- <button type="button" id="uploadButton">upload</button> -->
         </div>
 
         <!--Social Media-->
