--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <link rel="stylesheet" href="font.css" />
 
     <!-- jquery這裡 -->
+    <script src="jquery-ui-1.14.1/external/jquery/jquery.js"></script>
     <link
       rel="stylesheet"
       href="jquery-ui-1.14.1/themes/smoothness/jquery-ui.css"
     />
     <script src="jquery-ui-1.14.1/jquery-ui.js"></script>
+    <!-- safari background -->
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         const isSafari = /^((?!chrome|android).)*safari/i.test(
