--- a/localapplication.html
+++ b/localapplication.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="opencall.css" />
     <link rel="stylesheet" href="font.css" />
     <!-- jquery這裡 -->
+    <script src="jquery-ui-1.14.1/external/jquery/jquery.js"></script>
     <link
       rel="stylesheet"
-      href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css"
+      href="jquery-ui-1.14.1/themes/smoothness/jquery-ui.css"
     />
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="jquery-ui-1.14.1/jquery-ui.js"></script>
     <script src="main.js"></script>
   </head>
   <body>
