--- a/application-received.html
+++ b/application-received.html
@@ -8,25 +8,12 @@
     <link rel="stylesheet" href="font.css" />
 
     <!-- jquery這裡 -->
+    <script src="jquery-ui-1.14.1/external/jquery/jquery.js"></script>
     <link
       rel="stylesheet"
-      href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css"
+      href="jquery-ui-1.14.1/themes/smoothness/jquery-ui.css"
     />
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const isSafari = /^((?!chrome|android).)*safari/i.test(
-          navigator.userAgent
-        );
-        const img = document.getElementById("sasa");
-
-        if (isSafari && img) {
-          img.src = "safaririp.jpg";
-          img.style.filter = "none";
-        }
-      });
-    </script>
+    <script src="jquery-ui-1.14.1/jquery-ui.js"></script>
   </head>
   <body style="background-image: url(safaririp.jpg)">
     <p
