--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         {地址Address}華山1914文化創意產業園區 東二 ABCD棟 Huashan Creative
         Park<br />
         {重要資訊 Info Log}<br />
-        <div id="info-log" style="white-space: pre-wrap">讀取中...</div>
+        <div id="info-log" style="white-space: pre-wrap">🚧 讀取中…</div>
       </div>
     </div>
 
