change after meeting

--- a/localapplication.html
+++ b/localapplication.html
@@ -291,7 +291,7 @@
             class="form-input-radio"
             name="entry.133172086"
             id="PreferredBoothType_Curation"
-            value="裝置類型攤位"
+            value="裝置類"
             required
           />
           <label for="PreferredBoothType_Curation" class="form-label">
@@ -400,15 +400,8 @@
           style="display: none"
         >
           <span class="from-header">作品上傳</span>
-          <!-- 請提供已發行或預計發行之書籍相關作品。（不包含記事本、日月曆、明信片等輸出物），如提供之內容未達到錄取書攤類之標準，主辦單位將視情況條件式錄取其他攤種。
-          <br /><br />
-          從事藝術書刊創作者將作為入選優先條件審核，主辦單位將依照您所提交的內容供主辦單位審核。同時歡迎創作者依每屆主題發想創作及佈置攤位，這也將此納入攤位審核及草率獎參考。 -->
-          請提供雲端連結，內需包含作品列表、作品圖片⋯⋯等內容，並請確認存取權限為公開，若無法開啟或資料不齊全將不另行通知。
-          <br />
-          <br />
           請提供已發行或預計發行之書籍相關作品。（不包含記事本、日月曆、明信片等輸出物），如提供之內容未達到錄取書攤類之標準，主辦單位將視情況條件式錄取其他攤種。
-          <br />
-          <br />
+          <br /><br />
           從事藝術書刊創作者將作為入選優先條件審核，主辦單位將依照您所提交的內容供主辦單位審核。同時歡迎創作者依每屆主題發想創作及佈置攤位，這也將此納入攤位審核及草率獎參考。
         </div>
         <div
@@ -417,13 +410,10 @@
           style="display: none"
         >
           <span class="from-description-header-ness"
-            >必填問題、雲端連結上傳、<strong>請確認存取權限為公開</strong></span
-          ><br />
-          <!-- <span class="from-description-header-ness"
             >必填問題、請上傳PDF檔、檔案上限：<strong
               >最多 10 頁 A4，檔案大小不超過 8MB</strong
             ></span
-          >
+          ><br />
           <div class="upload-container">
             <input type="file" name="file" />
             <input
@@ -432,14 +422,7 @@
               value="some-unique-id-or-timestamp"
             />
             <input type="hidden" name="category" value="artwork" />
-          </div> -->
-          <input
-            type="url"
-            class="form-input"
-            name="entry.715764736"
-            placeholder="作品連結。https://"
-            maxlength="3000"
-          />
+          </div>
         </div>
 
         <!--Product Links-->
@@ -449,12 +432,8 @@
           style="display: none"
         >
           <span class="from-header">商品連結與販售品項描述</span>
-          <!-- 內需包含商品圖片⋯⋯等內容
-          <br><br>
-          另請簡述您攤位準備販售之商品品項。 -->
-          請提供雲端連結，內需包含商品圖片⋯⋯等內容，並請確認存取權限為公開，若無法開啟或資料不齊全將不另行通知。
-          <br />
-          <br />
+          內需包含商品圖片⋯⋯等內容
+          <br /><br />
           另請簡述您攤位準備販售之商品品項。
         </div>
         <div
@@ -463,13 +442,10 @@
           style="display: none"
         >
           <span class="from-description-header-ness"
-            >必填問題、雲端連結上傳、<strong>請確認存取權限為公開</strong></span
-          ><br />
-          <!-- <span class="from-description-header-ness"
             >必填問題、請上傳PDF檔、檔案上限：<strong
               >最多 10 頁 A4，檔案大小不超過 8MB</strong
             ></span
-          >
+          ><br />
           <div class="upload-container">
             <input type="file" name="file" />
             <input
@@ -478,14 +454,8 @@
               value="some-unique-id-or-timestamp"
             />
             <input type="hidden" name="category" value="product" />
-          </div> --><br />
-          <input
-            type="url"
-            class="form-input"
-            name="entry.1111437113"
-            placeholder="商品連結。https://"
-            maxlength="3000"
-          /><br />
+          </div>
+          <br />
           <textarea
             class="form-input-textarea"
             name="entry.1425905511"
@@ -500,10 +470,8 @@
           id="proposalLink"
           style="display: none"
         >
-          <!-- <span class="from-header">企劃書連結</span>
-          內需包含裝置草圖、計畫說明、創作者介紹、作品介紹、販售清單⋯⋯等內容 -->
           <span class="from-header">企劃書連結</span>
-          請提供雲端連結，內需包含裝置草圖、計畫說明、創作者介紹、作品介紹、販售清單⋯⋯等內容，並請確認存取權限為公開，若無法開啟或資料不齊全將不另行通知。
+          內需包含裝置草圖、計畫說明、創作者介紹、作品介紹、販售清單⋯⋯等內容
         </div>
         <div
           class="column layout-form-column-grid-1 question-PlanLinks"
@@ -511,15 +479,11 @@
           style="display: none"
         >
           <span class="from-description-header-ness"
-            >必填問題、雲端連結上傳、<strong>請確認存取權限為公開</strong></span
-          ><br />
-
-          <!-- <span class="from-description-header-ness"
             >必填問題、請上傳PDF檔、檔案上限：<strong
               >最多 20 頁 A4，檔案大小不超過 10MB</strong
             ></span
-          > -->
-          <!-- <div class="upload-container">
+          ><br />
+          <div class="upload-container">
             <input type="file" name="file" />
             <input
               type="hidden"
@@ -527,14 +491,7 @@
               value="some-unique-id-or-timestamp"
             />
             <input type="hidden" name="category" value="proposal" />
-          </div> -->
-          <input
-            type="url"
-            class="form-input"
-            name="entry.1801583093"
-            placeholder="企劃書連結。https://"
-            maxlength="3000"
-          />
+          </div>
         </div>
 
         <!--Social Media-->
