--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -243,6 +243,21 @@
             type="radio"
             class="form-input-radio"
             name="entry.133172086"
+            id="PreferredBoothType_TwoRegularBooth"
+            value="Two Regular Booth"
+            required
+          />
+          <label for="PreferredBoothType_TwoRegularBooth" class="form-label">
+            <span class="from-label-header">Two Regular Booths</span>
+            <span class="from-label-sub-header">240 USD Including Tax</span>
+            <span class="from-label-description-header">
+              Includes 2 tables, 3 chairs, and 3 exhibitor badges.
+            </span>
+          </label>
+          <input
+            type="radio"
+            class="form-input-radio"
+            name="entry.133172086"
             id="PreferredBoothType_CurationBooth"
             value="Curation Booth"
             required
